# KryogenicV2

./: CMakeLists.txt
Source/Kryogenic/Core/: AppCtx.cpp  AppCtx.hpp  Entrypoint.cpp  Services.hpp  WndCtx.cpp  WndCtx.hpp
Source/Kryogenic/Ecs/: ComponentSet.hpp  Registry.hpp
Source/Kryogenic/Foundation/: Assertions.hpp  Concepts.hpp  Log.hpp  Types.hpp
src/kryogenic/core/: app_ctx.cpp  app_ctx.hpp  entrypoint.cpp  services.cpp  services.hpp  wnd_ctx.cpp  wnd_ctx.hpp
src/kryogenic/foundation/: assert.hpp  log.hpp  singleton.hpp  types.hpp
